components/ua/authenticate-frontend-pre-prod-testing/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authenticate-frontend-pre-prod-testing
spec:
  ports:
    - name: https
      protocol: TCP
      port: 3000
      targetPort: 3000
