components/ua/authenticate-frontend-pre-prod-testing/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authenticate-frontend-pre-prod-testing
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.facilities.rl.ac.uk"
      secretName: facilities-tls-certificate
  rules:
    - host: "*.facilities.rl.ac.uk"
      http:
        paths:
          - path: /nafe-testing
            pathType: Prefix
            backend:
              service:
                name: authenticate-frontend-pre-prod-testing
                port:
                  number: 3000
